[package]
name = "ermutexbypass"
version = "0.1.0"
edition = "2021"

[dependencies.retour]
version = "0.3.1"
features = ["static-detour"]

[dependencies.windows]
version = "0.58.0"
features = [
  "Win32_System_SystemServices",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_System_LibraryLoader",
]

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
